# budgeting

./: .air-assets.toml  .air-server.toml  .air-sqlc.toml  .air-tailwind.toml  .air.toml  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  backup.sh  db.py  docker-compose.yml  functions.py  go.mod  go.sum  interactive.py  main.py  mise.toml  models.py  prefix-log  pyproject.toml  server.Dockerfile  sqlc.Dockerfile  sqlc.yaml  start  supervisord.conf  tailwind.Dockerfile  tailwind.config.js  utils.py
.github/workflows/: checks.yml
_legacy/: .dockerignore  docker-compose.yml
_legacy/api/: pyproject.toml
_legacy/api/core/: dependencies.py  router.py
_legacy/api/months/: models.py
_legacy/api/plans/: queries.py
_legacy/api/tests/: test_plans.py  utils.py
_legacy/api/transactions/: queries.py
_legacy/web/: .eslintrc.json  .prettierignore  Dockerfile
_legacy/web/src/: App.tsx  MonthPage.tsx  PlansTable.tsx  TransactionRow.tsx  TransactionsTable.tsx  api.ts  theme.ts  utils.ts
api/: .dockerignore  Dockerfile  init.sql  main.py  pyproject.toml
api/core/: config.py  dependencies.py  models.py  router.py  utils.py
api/months/: models.py  queries.py  routes.py
api/plans/: models.py  queries.py  routes.py
api/stats/: routes.py
api/tests/: test_plans.py  test_transactions.py  utils.py
api/transactions/: models.py  queries.py  routes.py
assets/: assets.go
cmd/: main.go
cmd/app/: main.go
cmd/migrate/: main.go
cmd/migrate/migrations/: 20240127152423_init.sql  20240128045841_remove_starting_balance_from_months.sql  20240219161944_use_text.sql  20240219162441_change_type_to_transaction_type.sql  20240518192744_use_numeric.sql  20240629202033_months_drop_month_id.sql  20241007044456_add_created_at_updated_at.sql  20241018041152_add_uc_on_month_budgets.sql  20241018051353_fix_not_null.sql  20241018212730_add_enums.sql  20241018212916_budget_item_view.sql
cmd/tui/: main.go
components/budgets/: budget.templ
components/graph/: graph.templ
components/layout/: base.templ  base_templ.go
components/months/: month.templ
components/transactions/: transaction.templ  transaction_templ.go
database/: budgets.go  budgets.sql.go  database.go  methods.go  models.go  months.go  months.sql.go  transactions.go  transactions.sql.go
db/: database.go  months.go  transactions.go
handlers/: months.go  transactions.go
queries/: budgets.sql  months.sql  transactions.sql
router/: router.go
routers/: routers.go  transactions.go
server/: base.go  budgets.go  graph.go  months.go  router.go  server.go  transactions.go
tui/: budgets.go  editor.go  months.go  newTransaction.go  style.go  transactions.go  tui.go
types/: types.go
util/: context.go  time.go  types.go  util.go
web/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
web/src/: AddTransactionModal.tsx  App.tsx  EditableField.tsx  MonthPage.tsx  PlansTable.tsx  TransactionsTable.tsx  api.ts  apiConfig.ts  index.css  main.tsx  types.ts  utils.ts
