[tool.poetry]
name = "budgeting"
version = "0.1.0"
description = ""
authors = ["Ethan Saxenian <ethansaxenian+github@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.15"
polars = "^0.18.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
