[tool.poetry]
name = "budgeting"
version = "0.1.0"
description = ""
authors = ["Ethan Saxenian <ethansaxenian+github@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.18.2"
fastapi = "^0.96.1"
pydantic = "^1.10.9"
psycopg2-binary = "^2.9.6"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.3.2"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core==1.5.1"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
extend-exclude = [
    ".venv",
    ".idea",
    ".git",
    "__pycache__",
    ".ruff_cache"
]
line-length = 130
indent-width = 4

[tool.ruff.lint]
ignore = ["E501", "ISC001", "S311"]
select = [
    "A",
    "B",
    "C",
    "C4",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PGH",
    "PL",
    "PTH",
    "Q",
    "RUF",
    "S",
    "SIM",
    "TRY",
    "UP",
    "W",
    "YTT"
]

[tool.ruff.lint.per-file-ignores]
"test_*" = ["S101", "PL"]
"queries.py" = ["S608"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
